Relecture et correction chapitre indicateur

--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1672,3 +1672,9 @@
   year={2015},
   volume={11}
 }
+
+@inproceedings{Cover2005ElementsOI,
+  title={Elements of Information Theory: Cover/Elements of Information Theory, Second Edition},
+  author={Thomas M. Cover and Joy A. Thomas},
+  year={2005}
+}
