correction chapitre 5 et 6, en cours

--- a/05-Indicateur/source.tex
+++ b/05-Indicateur/source.tex
@@ -95,8 +95,6 @@ Le ratio de corrélation $\eta$ se définit à partir de $\varphi$ et mesure la 
 
 Une possibilité d'estimation de $\varphi(x)$ est illustré en figure~\ref{fig:cr_box}~: nous discrétiserons les valeurs de $X$ en $n$ valeurs $(x_1, \cdots, x_n)$ et prendrons $\phi(x_i)$ comme la moyenne des valeurs de $Y$ dans l'intervalle $[x_{i-1}, x_i]$.
 
-
-
 % $\mathbb{E}(Var(Y|X))$ représente la moyenne des écarts de $Y|X=x_i$ à sa valeur moyenne en $x_i$ $\mathbb{E}(Y|X=x_i)$ pour une valeur de $X = x_i$ donnée. 
 % En effet, en notant $Z$ la variable aléatoire $Y | X=x_i$~: 
 % $$ Var(Y|X=x_i) = \mathbb{E}((Z - \mathbb{E}(Z))^2)$$
@@ -160,7 +158,7 @@ Enfin, nous traçons en figure~\ref{fig:cr_evol} l'évolution du ratio de corré
 Les mesures sont réalisées sur 10 expériences réalisées sur des distributions d'entrées identiques, puis moyennées sur ces expériences.
 Nous observons que $\eta(U;\bmu)$ garde une valeur élevée tout au long de l'apprentissage pour CxSOM.
 Le ratio de corrélation traduit en effet une relation fonctionnelle, mais ne prend pas en compte la proximité des positions. 
-Or, par construction de l'algorithme, une carte, par exemple $M\m{1}$ définit son BMU en fonction de $\inpx\m{1}$ et de son entrée contextuelle $\bmu\m{2}$, représentant directement $\inp\m{2}$. $U$ est donc une fonction du BMU dans chaque carte dès le début de l'apprentissage. Le ratio de corrélation ne traduit donc pas l'organisation continue des poids.
+Or, par construction de l'algorithme, une carte, par exemple $M\m{1}$ définit son BMU en fonction de $\inpx\m{1}$ et de son entrée contextuelle $\bmu\m{2}$, représentant directement $\inpx\m{2}$. $U$ est donc une fonction du BMU dans chaque carte dès le début de l'apprentissage. Le ratio de corrélation ne traduit donc pas l'organisation continue des poids.
 
 \begin{figure}
     \centering\includegraphics[width=0.8\textwidth]{correlation_ratio_cercle0.pdf}
