--- a/main.tex
+++ b/main.tex
@@ -39,6 +39,8 @@
 \usepackage[ruled,french,frenchkw,onelanguage]{algorithm2e}
 \usepackage{mathtools}
 \usepackage{subfiles}
+\usepackage{float}
+
 \SetRealMargins{26mm}{20mm}
 \renewcommand{\floatpagefraction}{.8}
 
