--- a/06-Analyse/source.tex
+++ b/06-Analyse/source.tex
@@ -28,14 +28,10 @@ Cela nous permettra également de mesurer l'apprentissage de cette dépendance c
 
 Une architecture CxSOM est composée de $N$ cartes connectées entre elles, pouvant prendre ou non une entrée externe $\inpx\m{i}$. L'objectif de l'architecture est d'appendre une représentation des relations entre les modalités $\inpx\m{i}$.
 
-Nous étudierons dans ce chapitre des architectures de $N = 2$, puis $N=3$ cartes en une dimension. L'étude en 1D facilite les représentations et permet donc une meilleure compréhension des mécanismes d'apprentissage.
+Nous étudierons dans ce chapitre des architectures de $N = 2$, puis $N=3$ cartes en une dimension.
+L'étude en 1D facilite les représentations et permet donc une meilleure compréhension des mécanismes d'apprentissage.
 Nous considérons des architectures dans lesquelles chaque carte prend une entrée externe. 
 Sauf si précisé, les connexions sont réciproques entre chaque carte de l'architecture, ce qui est illustré en figure~\ref{fig:archis}.
-
-\begin{figure}[t]
-	\centering\includegraphics[width=\textwidth]{archis.pdf}
-	\caption{Disposition des cartes et connexions des architectures de deux et trois cartes étudiées dans ce chapitre \label{fig:archis}}
-\end{figure}
 
 Nous nous concentrons d'abord sur des architectures de deux cartes, prenant chacune en entrée une modalité en une dimension.
 Chaque carte a une taille fixée de 500 n\oe{}uds, indexées entre 0 et 1, et possède deux couches de poids $\w_e$ et $\w_c$. Les rayons de voisinage sont fixés à $r_e = 0.2$ et $r_c = 0.02$, sauf si précisé dans l'expérience.
@@ -68,8 +64,6 @@ Nous testerons ensuite si les observations réalisées sur le modèle du cercle 
 	\item Entrées totalement indépendantes, prises aléatoirement dans le carré $[0,1]^2$~(\textbf({E})). $U$ est alors une variable 2D correspondant aux entrées.
 	\item Entrées sur un anneau \textbf{(F)}. $U$ est alors une variable 1D avec du bruit dans le modèle d'entrées. Une carte de Kohonen classique a comme propriété d'être résistante au bruit sur les données. Ainsi, une carte 1D se dépliant sur un anneau fin en 2D apprendra d'abord une représentation du cercle sous-jacent. Nous voulons vérifier comment cette propriété se vérifie sur l'apprentissage de données par plusieurs cartes.
 \end{itemize}
-
-
 
 La génération des entrées suit le processus suivant~: $U$ est tiré uniformément dans $[0,1]$. Le couple d'entrées $(\inpx\m{1},\inpx\m{2})$ généré à partir d'une même valeur de $U$ est présenté à l'architecture lors d'une même itération.
 L'apprentissage est réalisé sur un échantillon de 20000 points, générés aléatoirement et présentés une fois. 
@@ -107,8 +101,14 @@ Toutes les expériences présentées ici tournent sur un processeur i7 4 c\oe{}u
 
 \section{Mécanismes d'auto-organisation jointe sur une architecture de deux cartes}
 
-Le premier but de cette étude est d'identifier des comportements \emph{systémiques} émergeant d'une architecture simple à deux et trois cartes, sur des entrées en deux et trois dimensions. 
-Nous présentons d'abord les comportements relevés sur le modèle d'entrées \textbf{A}, puis nous étendrons ces observations aux autres modèles d'entrées.
+Le premier but de cette étude est d'identifier des comportements \emph{systémiques} émergeant d'une architecture simple à deux cartes.
+Nous présentons d'abord les comportements relevés sur le modèle d'entrées \textbf{A}, puis nous étendrons ces observations aux autres modèles d'entrées. L'architecture utilisée dans toutes les expériences est représentée en figure~\ref{fig:archis}.
+
+\begin{figure}[t]
+	\centering\includegraphics[width=\textwidth]{archi_2maps.pdf}
+	\caption{Schéma de l'architecture de deux cartes étudiée et rappel des notations. Chaque carte possède une couche de poids externe et une couche de poids contextuels. Les connexions sont rétroactives~: l'entrée contextuelle de $M\m{1}$ est la position du BMU de la carte $M\m{2}$ et inversement. Chaque carte prend une entrée externe.\label{fig:archis}}
+\end{figure}
+
 
 \subsection{Mécanismes observés sur les entrées en cercle}
 
@@ -271,87 +271,101 @@ Nous y observons que les cartes quantifient tout l'espace $[0,1]^2$, mais que se
 \end{figure}
 
 Enfin, nous voulons vérifier si les cartes sont robustes au bruit en prenant des données en forme d'anneau (Entrées~\textbf{(E)}), représentées en Figure~\ref{fig:anneau_w}. La disposition des poids et entrées rejoint les observations réalisées sur les autres expériences.
+Nous ajoutons que, dans toutes ces dispositions d'entrées le tracé de $U$ en fonction de la position du BMU dans chaque carte montre une relation fonctionnelle entre $U$ et les positions du BMU, ce qui montre que chaque carte de l'architecture a appris une représentation du modèle d'entrée. Nous reviendrons plus en détail sur l'utilisation de $U$ dans l'analyse des réponses des cartes au chapitre \ref{chap:indicateur}.
 \begin{figure}[H]
 	\centering\includegraphics[width=0.8\textwidth]{anneau/weights.pdf}
 	\caption{Représentation cartographique des poids et entrées pour des entrées sur un anneau. \label{fig:anneau_w}}
 \end{figure}
 
-Nous ajoutons que, dans toutes ces dispositions d'entrées le tracé de $U$ en fonction de la position du BMU dans chaque carte montre une relation fonctionnelle entre $U$ et les positions du BMU, ce qui montre que chaque carte de l'architecture a appris une représentation du modèle d'entrée. Nous reviendrons plus en détail sur l'utilisation de $U$ dans l'analyse des réponses des cartes au chapitre \ref{chap:indicateur}.
-
-
-
 \subsection{Mécanismes de formation des zones de poids contextuels}
 
-Les comportements observés sur les distributions d'entrées en 2D confirment et complètent les hypothèses sur la disposition d'entrées en cercle. La quantification vectorielle est correctement réalisée sur différentes dispositions d'entrées, avec les poids disposés en étages en raison des zones. Ces zones se forment systématiquement en fonction des mécanismes d'auto-organisation de la carte, indépendamment de la détection d'une relation entre les entrées. Leur nombre ne varie pas en fonction des distributions d'entrées.
-
-Nous nous intéressons enfin aux autres mécanismes des cartes influençant la formation de zones. Nous comparons la réponse des cartes pour un même rayon de voisinage externe $r_e$ et des rayons de voisinage $r_c$ différents, et regarderons si les zones ont une influence sur la convergence de la relaxation ou si l'organisation et la relaxation ne sont pas liées.
-
-% Nous avons observé sur ces distributions d'entrées en 2D les comportements suivants qui vérifient et complètent les hypothèses formulées sur la disposition d'entrées en cercle.
-% Tout d'abord, la quantification vectorielle reste correctement réalisées sur les différentes dispositions d'entrées. 
-% Les valeurs prises par les poids sont disposées en étages du fait des zones.
-% Cette organisation en zones intervient dès que la disposition des entrées implique d'avoir à séparer au moins deux valeurs de $U$ pour une même entrée externe.
-% Le fait que des zones existent n'implique pas la détection d'une relation entre entrées~: la carte forme des zones lorsque les entrées sont indépendantes. Cette formation de zones est systémique aux mécanismes d'auto-organisation des cartes. Le nombre de zones ne varie pas en fonction des distributions d'entrées. Cela implique que les mécanismes d'évolution de la carte conduisent systématiquement à la formation des zones, et que l'organisation s'adapte ensuite à cette disposition. 
+L'organisation en zones observée sur les distributions d'entrées en 2D confirment et complètent les hypothèses formulées sur la disposition d'entrées en cercle~:
+La poids des cartes s'organisent en fonction de l'entrée externe, puis des zones se forment systématiquement pour différencier le modèle latent. Les zones se forment dès lors que plusieurs valeurs d'entrées contextuelles correspondent à une même valeur d'entrée externe dans une carte.
+L'organisation et le nombre de zones sont ensuite liées aux mécanismes d'apprentissage de la carte.
+Nous nous intéressons à quelques mécanismes des cartes influençant la formation de zones. 
+Nous comparerons ainsi l'organisation obtenue sur une même disposition d'entrées, pour différents couples de rayons de voisinage contextuels et externes. 
+Nous regarderons ensuite si les zones ont une influence sur la convergence de la relaxation.
 
 \subsubsection{Dépendance aux paramètres des cartes}
 
-La formation de zones dépend des valeurs des rayons externes et contextuels.
-Nous reprenons les entrées \textbf{A}, en cercle et lançons l'apprentissage d'architectures de paramètres différents. $r_e$ est fixé à $0.2$ et $r_c$ varie de $0.2$ à $0.005$. Nous voulons observer comment les zones dépendent des paramètres de l'architecture.
-Nous observons ce comportement en figure \ref{fig:rcre} sur laquelle nous traçons la représentation cartographique de $M\m{1}$ après apprentissage pour ces différents rayons de voisinages. Nous n'avons pas représenté $M\m{2}$, mais son comportement est semblable à $M\m{1}$ par la symétrie des entrées.
-Notons également que nous avons observé que l'organisation dépend bien du rapport entre rayons de voisinage et non de la valeur du rayon de voisinage contextuel en elle même. C'est pourquoi nous fixons $r_e$ à 0.2 sur cet exemple et faisons seulement varier $r_c$.
+Nous voulons observer comment les zones dépendent des paramètres de l'architecture, en particulier des rayons externes et contextuels.
+Nous reprenons les entrées \textbf{A}, en cercle et lançons l'apprentissage de plusieurs architectures, de paramètres différents. $r_e$ est fixé à $0.2$ et $r_c$ varie de $0.2$ à $0.005$. 
+
+En figure \ref{fig:rcre}, nous traçons la représentation cartographique de $M\m{1}$ après apprentissage pour ces différents rayons de voisinages. 
+Nous n'avons pas représenté $M\m{2}$, mais son comportement est semblable à $M\m{1}$ par la symétrie des entrées.
+Notons également que nous avons observé que l'organisation dépend bien du rapport entre rayons de voisinage et non de la valeur du rayon de voisinage contextuel en elle-même. C'est pourquoi nous fixons $r_e$ à $0.2$ sur cet exemple et faisons seulement varier $r_c$.
 
 Pour $r_c = r_e$, ainsi que $r_c \geq r_e$, la carte ne s'organise pas en zones. 
 La formation de celles-ci intervient pour $r_c < r_e$. Sur la figure, nous commençons à voir des zones de poids contextuels apparaître pour $r_e = 3r_c$, sans que les BMUs ne marquent de séparation. La notion de zones est observée pour $r_e = 4r_c$.
 Le nombre de zones de BMU augmente ensuite avec le rapport des rayons de voisinage. La taille du rayon de voisinage contextuel est ensuite limité par la taille de la carte. Si celui-ci est trop faible, la notion de zone de poids contextuel n'a plus lieu d'être. C'est ce qu'on observe pour $\frac{r_e}{r_c} = 40$. $r_c$ est de $2$ unités. Chaque zone de BMU ne compte que quelques unités, on ne peut donc plus vraiment parler de sous-carte.
 
+\begin{figure}[H]
+	\includegraphics[width=\textwidth]{rceqre/rcre_tot.pdf}
+	\caption{Représentation cartographique de la carte $M\m{1}$ pour différents rayons de voisinage contextuels, le rayon de voisinage $r_e$ étant fixé à $0.2$. Nous observons que la présence de zones dépend du rapport entre les rayons de voisinage. La carte définit des zones de BMUs grâce à la forme poids contextuels, de plus en plus nombreuses et contenant de moins en moins d'unités lorsqu'on augmente le rapport entre rayons de voisinage.
+	La carte $M\m{2}$, non représentée ici, se comporte de façon similaire.\label{fig:rcre}
+	}
+\end{figure}	
+
 En faisant la même expérience pour les autres dispositions d'entrées, nous pouvons observer que pour un même couple $r_e,r_c$, le nombre de zones reste similaire quelle que soit l'expérience. Leur forme diffère en fonction des entrées.
 C'est bien les paramètres des cartes qui induisent donc l'organisation en zones.
 L'organisation au sein d'une zone et la forme des poids contextuels dépendent ensuite du modèle d'entrées.
 
-Ces zones s'expliquent du fait que le rapport entre rayons de voisinage introduit une relation subordonnée entre les poids lors de la mise à jour et deux échelles temporelles de mise à jour. Les poids externes se déplient en effet plus vite que les poids contextuels, puis gardent une \og attraction \fg{} plus forte sur les unités voisines. Les poids contextuels doivent donc composer avec cette force.
+Ces zones peuvent s'expliquer du fait que le rapport entre rayons de voisinage introduit une relation subordonnée entre les poids lors de la mise à jour ainsi que deux échelles temporelles de mise à jour. 
+Les poids externes se déplient en effet plus vite que les poids contextuels, puis gardent une \og attraction \fg{} plus forte sur les unités voisines. Les poids contextuels doivent donc composer avec cette force.
 
-\begin{figure}
-	\includegraphics[width=\textwidth]{rceqre/rcre_tot.pdf}
-	\caption{Représentation cartographique de la carte $M\m{1}$ pour différents rayons de voisinage contextuels, le rayon de voisinage $r_e$ étant fixé à $0.2$. 
-	Nous observons que la présence de zones dépend du rapport entre les rayons de voisinage.
-	La carte $M\m{2}$, non représentée ici, se comporte de façon similaire.\label{fig:rcre}
-	}
-\end{figure}
+Les rayons de voisinage sont les paramètres ayant le plus d'influence sur l'organisation des cartes, d'où le choix de les étudier.
+Dans nos expériences, nous avons pris $r_c$ identique pour toutes les couches de poids contextuels.
+Nous pourrions cependant associer à chaque couche de poids d'une carte un rayon de voisinage différent. 
+Enfin, nous pouvons aussi faire varier le taux d'apprentissage $\alpha$, ainsi que les paramètres de la fonction d'activation $\beta$, $\sigma$, etc.
+Pour pouvoir adpater ces paramètres automatiquement dans un objectif d'application et réaliser une étude paramétrique approfondie, il nous faudrait définir une fonction de coût caractérisant l'organisation d'une carte ou relative à un objectif d'apprentissage. 
+Nous discuterons d'un tel indicateur au chapitre \ref{chap:indicateur}, mais soulignons ici que nous n'avons pas encore défini de valeur adéquate. 
+C'est pourquoi nous nous sommes intéressés à la compréhension de l'effet des paramètres dans nos travaux actuels, et n'avons pas cherché à optimiser ces valeurs.
+
 
 \subsubsection{Influence de la présence de zones sur la recherche de BMU par relaxation}
 
 Nous nous intéressons au passage à l'influence de la formation de zones sur le processus de relaxation.
 Nous pourrions penser que ces zones favorisent la recherche de consensus lors de la relaxation et la convergence des poids.
-Nous traçons en figure~\ref{fig:conv_rcre} le nombre de pas moyen nécessaire à la recherche du BMU par relaxation et les indicateurs de convergence des poids des cartes.
-Ces valeurs sont similaires dans les cas d'une carte formant des zones et d'une carte n'ayant pas formé de zones. Sur des cartes 1D, nous n'observons donc pas d'amélioration de la relaxation grâce à la formation de zones.
-Cela montre toutefois que la convergence de la relaxation n'est pas spécifique aux valeurs de paramètres choisies dans ces expériences et est ainsi une méthode générale de connexion entre cartes.
+Nous traçons en figure~\ref{fig:conv_rcre} le nombre de pas moyen nécessaire à la recherche du BMU par relaxation et les indicateurs de convergence des poids des cartes, dans le cas d'une carte ayant formé des zones et d'une carte n'en ayant pas formé ($\frac{r_e}{r_c} = 1$). 
+Ces valeurs sont similaires dans les deux cas.
+Sur des cartes 1D, nous n'observons donc pas d'amélioration de la relaxation grâce à la formation de zones.
+Cela montre que la convergence de la relaxation n'est pas spécifique aux valeurs de paramètres choisies dans ces expériences et est ainsi une méthode générale de connexion entre cartes.
 
 \begin{figure}
 	\includegraphics[width=\textwidth]{rceqre/convergence_relax.pdf}
-	\caption{\'Evolution du nombre moyen de pas de relaxation et du taux de convergence pour une organisation de cartes ayant formé des zones de poids contextuels ($\frac{r_e}{r_c} = 10$ ) et une organisation n'ayant pas formé de zones ($\frac{r_e}{r_c} = 1$). Dans les deux cas, la relaxation mène à un consensus. 
-	Donc, dans des cartes en une dimension, la formation de zones ne favorise pas significativement la convergence de la relaxation. Par ailleurs, le mécanisme de relaxation a donc un sens général, quels que soient les paramètres des cartes \label{fig:conv_rcre}}
+	\caption{\'Evolution du nombre moyen de pas de relaxation et du taux de convergence pour une organisation de cartes ayant formé des zones de poids contextuels ($\frac{r_e}{r_c} = 10$ ) et une organisation n'ayant pas formé de zones ($\frac{r_e}{r_c} = 1$). Dans les deux cas, la relaxation mène à un consensus en fin d'apprentissage.
+	Donc, dans des cartes en une dimension, la formation de zones ne favorise pas significativement la convergence de la relaxation. Par ailleurs, le mécanisme de relaxation a donc un sens général, quels que soient les paramètres des cartes. \label{fig:conv_rcre}}
 \end{figure}
 
 \subsubsection{Discussion}
 
-Les motifs en zones formés par les poids contextuels sont un mécanisme qui émerge du processus d'évolution des cartes.
-Au sein d'une même zone, dans laquelle les poids externes ont des valeurs très proches, les poids contextuels s'organisent de manière à former une sous-carte des valeurs possibles de l'entrée contextuelle.
-On pourrait donc introduire une notion d'indices primaires et secondaires, l'indice primaire étant celui de la zone et l'indice secondaire la position dans la zone.
-Cette notion d'indices primaires et secondaires est également observée en biologie dans le cerveau. Ainsi la figure~\ref{fig:ballard} présente un schéma d'organisation des neurones du cortex V1 observé en \cite{ballard_cortical_1986}.
-Les auteurs observent que des neurones situés à différents emplacements sur le cortex ne reçoivent pas la même partie des entrées visuelle. 
-Ces entrées différenciées forment une indexation~\emph{primaire} de V1. 
-Au sein d'une zone de même indice primaire, les neurones s'organisent alors de façon à représenter tout le sous-espace des entrées ayant été présenté à la zone. Cette sous-carte définit alors des indices secondaires.
-Ici, la même entrée est certes présentée à toute la carte, donc la proximité avec ce modèle biologique est limitée. 
+Les motifs en zones formés par les poids contextuels sont un mécanisme qui émerge du processus d'évolution des cartes. Ces zones dépendent principalement des rayons de voisinages.
+Au sein d'une même zone, les poids externes ont des valeurs très proches et les poids contextuels s'organisent de manière à former une sous-carte des valeurs possibles de l'entrée contextuelle pour un même intervalle de valeurs d'entrée externe.
+On pourrait donc introduire une notion d'indices primaires et secondaires dans la carte, l'indice primaire étant celui de la zone et l'indice secondaire la position dans la zone.
 
-D'un point de vue computationnel, l'organisation d'une carte se rapproche d'une méthode de modulation~: la valeur de l'activité externe est modulée par l'activité contextuelle. La forme des poids permet à cette modulation d'encoder en une seule valeur $X$ et $U$, le modèle d'entrée. Elle émerge de la dynamique d'apprentissage des cartes.
-Les zones forment ainsi un deuxième niveau de quantification vectorielle au sein d'une carte. Ces deux niveaux de quantifications encodent à la fois l'entrée $\inpx$ et le modèle $U$ en une seule position de BMU.
-
-\begin{figure}[h!]
-	\centering\includegraphics[width=0.4\textwidth]{ballard_primary_secondary.png}
+\begin{figure}[H]
+	\centering\includegraphics[width=0.3\textwidth]{ballard_primary_secondary.png}
 	\caption{Schématisation d'une répartition en indices primaires et secondaire des neurones d'une aire corticale, tirée de~\cite{ballard_cortical_1986}. 
 	Les auteurs observent que la réponse de neurones du cortex est organisée en zones selon leur position, formant des indices primaires. Les carrés de la figure représentent cette première indexation.
 	Ces zones reçoivent différentes portions de l'espace d'entrée~: les zones situées à gauche du cortex traitent les signaux venant du champ visuel de gauche et ainsi de suite pour couvrir tout le champ visuel.
 	Au sein d'une zone, les neurones cartographient toutes les valeurs possibles de l'entrée sous forme de carte topologiquement ordonnée, formant une indexation secondaire. \label{fig:ballard}}
 \end{figure}
+
+
+Cette notion d'indices primaires et secondaires est observée en biologie dans le cerveau. 
+Ainsi la figure~\ref{fig:ballard} présente un schéma d'organisation des neurones du cortex V1 décrit en \cite{ballard_cortical_1986}.
+Les auteurs observent que des neurones situés à différents emplacements sur le cortex visuel ne reçoivent pas la même partie du champ de vision, et leur emplacement correspond à la partie du champ de vision traitée (gauche - droite, etc).
+Ces entrées différenciées forment une indexation~\emph{primaire} de V1. 
+Au sein d'une zone de même indice primaire, les neurones s'organisent alors de façon à représenter tout le sous-espace des entrées ayant été présenté à la zone. Cette sous-carte définit alors des indices secondaires.
+Ici, la même entrée est certes présentée à toute la carte, donc la proximité avec ce modèle biologique est limitée. On peut quand même noter qu'après apprentissage, un n\oe{}ud de la carte ne réagit qu'à un sous-ensemble d'entrées définies par les valeurs des poids externes autour cet emplacement, ce qui se rapproche de ce phénomène de spécialisation.
+
+D'un point de vue computationnel, l'organisation d'une carte se rapproche d'une méthode de modulation~: la valeur de l'activité externe est modulée par l'activité contextuelle. 
+La forme des poids permet à cette modulation d'encoder en une seule valeur $X$ et $U$, le modèle d'entrée. Elle émerge de la dynamique d'apprentissage des cartes.
+
+Les zones forment ainsi un deuxième niveau de quantification vectorielle au sein d'une carte. 
+Ces deux niveaux de quantifications encodent à la fois l'entrée $\inpx$ et le modèle $U$ en une seule position de BMU.
+
+
 
 \section{Prédiction d'entrée dans des architectures de trois cartes 1D}
 
@@ -363,7 +377,7 @@ Les zones forment ainsi un deuxième niveau de quantification vectorielle au sei
 Nous cherchons maintenant à utiliser l'apprentissage du modèle d'entrée dans une tâche de prédiction. Même sans entrée externe, une carte possède une activation grâce à ses entrées contextuelles et peut donc trouver un BMU par relaxation. Cette propriété permet de réaliser une prédiction de modalité manquante. 
 La prédiction est utilisée dans ce chapitre comme une expérience de validation de l'apprentissage du modèle par une architecture de cartes.
 Nous considérerons un modèle d'entrées dans lequel la connaissance de deux entrées et du modèle détermine la valeur de la troisième entrée. Si l'architecture de cartes, à partir de ces deux entrées, est capable de prédire la valeur de la troisième entrée, alors nous pourrons conclure que l'architecture a bien appris les relations entre entrées.
-Nous appliquerons la tâche de prédition sur des entrées jouets, puis nous utiliserons ensuite cette capacité de prédiction sur des entrées réelles pour le contrôle d'un drone.
+Nous appliquerons la tâche de prédiction sur des entrées jouets, puis nous utiliserons ensuite cette capacité de prédiction sur des entrées réelles pour le contrôle d'un drone.
 
 \subsection{Architecture de cartes}
 
